<resources>
    <string name="app_name">ClassRadar</string>
    <string name="more">More</string>
    <string name="More">More</string>
    <string name="Open">open</string>
    <string name="close">close</string>
    <string name="blue">blue</string>
    <string name="white">white</string>
    <string name="logo">logo</string>
    <string name="profile_picture">profile_picture</string>
    <string name="back">back</string>
    <string name="reload">reload</string>
    <string name="hide_keyboard">hide_keyboard</string>
    <integer name="swing_anim_time">750</integer>
    <string-array name="type">
        <item>Regular</item>
        <item>Leet</item>
    </string-array>
    <string-array name="accountType">
        <item>Student</item>
        <item>Teacher</item>
    </string-array>
    <string-array name="roomType">
        <item>LAB</item>
        <item>CLASS</item>

    </string-array>
    <string-array name="roomType1">
        <item>MB-</item>
        <item>ME-</item>
        <item>AS-</item>


    </string-array>
    <string-array name="roomType2">
        <item>MB</item>
        <item>ME</item>
        <item>AS</item>


    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_nav_drawer">nav_drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="contact_n_ravneet0298_gmail_com">Contact\nravneet0298@gmail.com</string>
    <string name="change_profile_photo">Change Profile Photo</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="new_password">New password</string>
    <string name="new_password_again">New password again</string>
    <string name="change_password">Change Password</string>
    <string name="send">send</string>
    <string name="type_a_message">Type a message....</string>
    <string name="chats">Chats</string>
    <string name="current_password">Current password</string>
    <string name="current_password_again">Current password again</string>
    <string name="deactivate_account">Deactivate Account</string>
    <string name="reset_password">Reset Password</string>
    <string name="email">Email</string>
    <string name="already_register_sign_in_here">Already Register? Sign in here</string>
    <string name="enable_location_services_to_continue">Enable location services to continue.</string>
    <string name="click_here_to_enable_location_services">Click here to enable location services.</string>
    <string name="qrcode">qrcode</string>
    <string name="scanqrcode">scanqrcode</string>
    <string name="join_circle">Join Circle</string>
    <string name="circle_code">Circle Code</string>
    <string name="join">Join</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="not_have_and_account_sign_up_here">Not have an account? Sign Up here</string>
    <string name="menu">menu</string>
    <string name="enter_adress_city_or_zip_code">  Enter Address,City or Zip Code</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="issharing">isSharing</string>
    <string name="restaurants">Restaurants</string>
    <string name="hospitals">Hospitals</string>
    <string name="atms">ATMs</string>
    <string name="gas_station">Gas Station</string>
    <string name="blank">--</string>
    <string name="choose_profile_photo">Choose Profile Photo</string>
    <string name="enter_your_name">Name</string>
    <string name="please_verify_your_account">Please verify your account after sign up!</string>
    <string name="whoops">Whoops!</string>
    <string name="no_internet_connection_found_check_your_connection_or_click_here_to_try_again">No Internet connection found. Check your connection or click here to try again.</string>
    <string name="remove_user">Remove User</string>
    <string name="unfollow">Unfollow</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="here_is_your_circle_code_invite_your_friends_and_family_members_and_start_sharing_your_location">Here is your Circle code. Invite your friends and family members and start sharing your location.</string>
    <string name="xxxxxx">XXXXXX</string>
    <string name="share">Share</string>
    <string name="getqrcode">getqrcode</string>
    <string name="sign_up">Sign Up</string>
    <string name="xxxx">xxxx</string>
    <string name="next">Next</string>
    <string name="unsend">Unsend</string>
    <string name="location_off">Location OFF</string>
    <string name="distance_1km">Distance 1KM</string>
    <string name="add_friends">Add Friends</string>
    <string name="invite">Invite</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="about_developer">About</string>
    <string name="email1">Email*</string>
    <string name="password1">Password*</string>
    <string name="signin1">signin</string>
    <string name="signup1">signup</string>
    <string name="name1">Name*</string>
    <string name="halfway">Halfway</string>
    <string name="midway">Midway</string>
    <string name="current_password_1">Current Password*</string>
    <string name="current_password_again_1">Current Password Again*</string>
    <string name="nearbyme_beta_v0_7_napp_developer_ravneet_singh_nravneet0298_gmail_com">NearbyMe beta V0.7\nApp Developer :- Ravneet Singh\nravneet0298@gmail.com</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="semester">Semester*</string>
    <string name="subject">Subject*</string>
    <string name="done">Done</string>
    <string name="answer">Answer*</string>
    <string name="question">Question*</string>
    <string name="assingnment">Assingnment*</string>
    <string name="title_activity_main_student">MainActivityStudent</string>
    <string name="add_class">ADD CLASS/LAB</string>
    <string name="remove_class">REMOVE CLASS/LAB</string>
    <string name="mb">MB-</string>
    <string name="class_name">Class Name*</string>
    <string name="add">ADD</string>
    <string name="me_main_block">* ME - Main Block</string>
    <string name="me_mechanical_engineering">* ME - Mechanical Engineering</string>
    <string name="as_applied_science">* AS - Applied Science</string>
    <string name="find_classes">FIND CLASSES</string>
    <string name="find_labs">FIND LABS</string>
    <string name="select_block">Select Block*</string>
    <string name="find">FIND</string>
    <string name="classradar">ClassRadar</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="profile">Profile</string>
    <string name="no_record_available">No record available!</string>
    <string name="type">Type*</string>
    <string name="admin_account_can_alter_data_so_please_perform_all_actions_carefully">*Admin account can alter data so please perform all actions carefully.</string>


</resources>
