<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Admin"
    android:background="#0f2027">
    <include
        layout="@layout/appbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="143dp"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/addClass"
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/btn_signin"
                android:text="@string/add_class"
                android:textColor="#0f2027" />

            <Button
                android:id="@+id/removeClass"
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/unfollow_gradient_a"
                android:text="@string/remove_class"
                android:textColor="#FFF" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="109dp"
        android:fontFamily="sans-serif-condensed"
        android:padding="20dp"
        android:text="@string/admin_account_can_alter_data_so_please_perform_all_actions_carefully"
        android:textAlignment="textStart"
        android:textColor="#FFF"
        android:textSize="14sp" />
</RelativeLayout>