<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/background"
            android:contentDescription="@string/blue" />


    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/logo"
            android:transitionName="@string/logo"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.027"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.005" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:id="@+id/SignInBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="50dp"
                android:layout_marginStart="100dp"
                android:layout_marginTop="100dp"
                android:background="@drawable/box_gradient"
                android:elevation="20dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="286dp"
                tools:layout_editor_absoluteY="225dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/reset_password"
                        android:textAlignment="center"
                        android:textColor="#FFF"
                        android:textSize="25sp"
                        android:visibility="visible"
                        tools:layout_editor_absoluteX="252dp"
                        tools:layout_editor_absoluteY="57dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="30dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:layout_weight="1"
                            android:fontFamily="sans-serif-condensed"
                            android:text="@string/email1"
                            android:textColor="#A6FFFFFF"
                            android:textSize="16sp" />

                        <ImageView
                            android:id="@+id/imageView8"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/ic_mail_white"
                            android:contentDescription="@string/logo"/>
                    </LinearLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp">

                        <android.support.design.widget.TextInputEditText

                            android:id="@+id/editTextEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="15dp"
                            android:layout_marginEnd="20dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="15dp"
                            android:background="@drawable/box"
                            android:drawablePadding="20dp"
                            android:fontFamily="sans-serif-condensed"
                            android:inputType="textEmailAddress"
                            android:padding="10dp"
                            android:textColor="#FFF"
                            android:transitionName="@string/email" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>



            </LinearLayout>

            <Button
                android:id="@+id/ButtonResetPassword"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:layout_marginBottom="20dp"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="170dp"
                android:layout_marginTop="-80dp"
                android:background="@drawable/unfollow_gradient_a"
                android:elevation="25dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/reset_password"
                android:textColor="#FFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.9"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="237dp"
        android:background="@drawable/textview_gradient"
        android:fontFamily="sans-serif-condensed"
        android:padding="5dp"
        android:text="@string/midway"
        android:textColor="#FFF"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="parent"
        android:transitionName="@string/signin1"/>

    <TextView
        android:id="@+id/textViewSignup"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView10"

        android:fontFamily="sans-serif-condensed"
        android:padding="5dp"
        android:text="@string/sign_in"
        android:textColor="#FFF"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="parent"
        />

</RelativeLayout>